kubernetes/apps/linkwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkwarden
  labels:
    toolkit.fluxcd.io/tenant: dev-team
