kubernetes/apps/linkwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: linkwarden
